src/objects/CSM_QI_Case_Follower__c.object
<CustomObject>
    <fields>
        <fullName>Account_Country__c</fullName>
        <label>Account Country</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Asset__c</fullName>
        <formula>Case__r.AssetName__c</formula>
        <label>Case Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CSM Case Followers</relationshipLabel>
        <relationshipName>CSM_Case_Followers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CSM Case Followers</relationshipLabel>
        <relationshipName>CSM_Case_Followers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>CSM Case Follower</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>CSM Case Follower Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSM Case Followers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>